# limitless-companion

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  a  and  andr  andro  project-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_task.md
android/: README.md  a  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_android.cpp
android/app/src/main/java/com/limitless/companion/: MainActivity.kt
android/app/src/main/java/com/limitless/companion/data/local/db/: SessionDao.kt  SessionEntity.kt  TranscriptDao.kt  TranscriptDatabase.kt  TranscriptEntity.kt
android/app/src/main/java/com/limitless/companion/data/local/preferences/: AppPreferences.kt
android/app/src/main/java/com/limitless/companion/data/remote/: ApiService.kt  NetworkClient.kt
android/app/src/main/java/com/limitless/companion/data/remote/dto/: ApiModels.k
android/app/src/main/java/com/limitless/companion/services/: AudioCaptureService.kt  WavWriter.kt  WhisperService.kt
android/app/src/main/java/com/limitless/companion/ui/: RecordingScreen.kt  SettingsScreen.kt  TranscriptListScreen.kt  TranscriptsViewModel.kt
docs/: architecture.md  wireframes.md
docs/api/: api-reference.md
docs/research/: action-detection-timing.md  rag-architecture.md  speaker-diarization.md
docs/setup/: android-development.md  server-deployment.md
plans/: project-plan.md
server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  runos.yaml
server/app/: __init__.py  main.py
server/app/api/routes/: health.py
server/app/api/routes/transcripts/: transcripts.py
server/app/config/: settings.py
server/app/database/: connection.py
server/app/models/: transcript.py
server/scripts/: generate_api_key.py  setup_db.py
